# fmtinit

./: .editorconfig  .fmtinit-state.json  .pre-commit-config.yaml  .prettierrc.json  FASTREADME.md  README.md  package-lock.json
fmtinit/: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
fmtinit/.github/workflows/: ci.yml
fmtinit/src/fmtinit/: __init__.py  cli.py  main.py
fmtinit/src/fmtinit/commands/: __init__.py  add.py  doctor.py  init.py  scan.py
fmtinit/src/fmtinit/core/: __init__.py  detector.py  hooks.py  installer.py  profiles.py  state.py  writer.py
fmtinit/src/fmtinit/templates/: precommit.yaml.tpl
fmtinit/tests/: __init__.py  conftest.py  test_cli.py  test_detector.py  test_hooks.py  test_profiles.py  test_writer.py
